# kadisredu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mwis_benchmark_to_kaval_yaml.sh  submodule_versions.txt
.github/workflows/: create_release_for_v_tag.yaml  publish_release_with_submodules.yaml
apps/: CMakeLists.txt  cli.cpp  cli.h  kadisredu.cpp
cmake/: Dependencies.cmake
configs/: GA.toml  GS.toml  PRGA.toml  PRGS.toml  RGA.toml  RGS.toml  RnPA.toml  RnPS.toml
lib/: CMakeLists.txt
lib/kadisredu/: CMakeLists.txt  definitions.h
lib/kadisredu/algorithms/mwis/: async_greedy.cpp  async_greedy.h  async_greedy_maximize.cpp  async_greedy_maximize.h  async_reducer.cpp  async_reducer.h  debug.h  greedy.cpp  greedy.h  greedy_maximize.cpp  greedy_maximize.h  kadisredu_mwis.cpp  kadisredu_mwis.h  kernel_utils.h  mwis_def.h  peeler.cpp  peeler.h  reduce_measurement.h  reducer.cpp  reducer.h  reduction_ptr.h  solver_factories.h  sync_greedy.cpp  sync_greedy.h  sync_greedy_maximize.cpp  sync_greedy_maximize.h  sync_reducer.cpp  sync_reducer.h  weighted_reductions.cpp  weighted_reductions.h
lib/kadisredu/data_structures/: dist_dynamic_graph.h  fast_set.cpp  fast_set.h  maxNodeHeap.h  node_marker.h  sized_vector.h
lib/kadisredu/graphutils/: dist_dynamic_graph_factories.h  graph_summary.cpp  graph_summary.h  redistribution.h
lib/kadisredu/tools/: graph_io.cpp  graph_io.h  io.h  json_printer.cpp  json_printer.h  kaminpar_helper.h  kamis_helper.cpp  kamis_helper.h  logger.h  random_functions.cpp  random_functions.h  timer.h  utils.h
